<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.springframework.cloud</groupId>
	<artifactId>spring-cloud-dataflow</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<name>spring-cloud-dataflow</name>
	<description>Spring Cloud Dataflow</description>
	<packaging>pom</packaging>
	<url>https://cloud.spring.io/spring-cloud-dataflow/</url>
	<organization>
		<name>Pivotal Software, Inc.</name>
		<url>https://www.spring.io</url>
	</organization>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0</url>
			<comments>
				Copyright 2014-2021 the original author or authors.

				Licensed under the Apache License, Version 2.0 (the "License");
				you may not use this file except in compliance with the License.
				You may obtain a copy of the License at

				https://www.apache.org/licenses/LICENSE-2.0

				Unless required by applicable law or agreed to in writing, software
				distributed under the License is distributed on an "AS IS" BASIS,
				WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
				implied.

				See the License for the specific language governing permissions and
				limitations under the License.
			</comments>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/spring-cloud/spring-cloud-dataflow</url>
		<connection>scm:git:git://github.com/spring-cloud/spring-cloud-dataflow.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/spring-cloud/spring-cloud-dataflow.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<developers>
		<developer>
			<id>scdf-team</id>
			<name>Data Flow Team</name>
			<organizationUrl>https://github.com/spring-cloud/spring-cloud-dataflow/graphs/contributors</organizationUrl>
		</developer>
	</developers>
	<modules>
		<module>spring-cloud-dataflow-build</module>

		<module>spring-cloud-dataflow-common</module>
		<module>spring-cloud-common-security-config</module>
		<module>spring-cloud-dataflow-parent</module>
		<module>spring-cloud-dataflow-container-registry</module>
		<module>spring-cloud-dataflow-configuration-metadata</module>
		<module>spring-cloud-dataflow-core-dsl</module>
		<module>spring-cloud-dataflow-core</module>
		<module>spring-cloud-dataflow-server-core</module>
		<module>spring-cloud-dataflow-rest-resource</module>
		<module>spring-cloud-dataflow-audit</module>
		<module>spring-cloud-dataflow-registry</module>
		<module>spring-cloud-dataflow-platform-kubernetes</module>
		<module>spring-cloud-dataflow-platform-cloudfoundry</module>
		<module>spring-cloud-dataflow-autoconfigure</module>
		<module>spring-cloud-dataflow-rest-client</module>
		<module>spring-cloud-dataflow-shell</module>
		<module>spring-cloud-dataflow-shell-core</module>
		<module>spring-cloud-dataflow-completion</module>
		<module>spring-cloud-skipper</module>
		<module>spring-cloud-starter-dataflow-server</module>
		<module>spring-cloud-starter-dataflow-ui</module>
		<module>spring-cloud-dataflow-server</module>
		<module>spring-cloud-dataflow-tasklauncher</module>
		<module>spring-cloud-dataflow-single-step-batch-job</module>
		<module>spring-cloud-dataflow-composed-task-runner</module>
		<module>spring-cloud-dataflow-test</module>
		<module>spring-cloud-dataflow-dependencies</module>
		<module>spring-cloud-dataflow-classic-docs</module>
		<module>spring-cloud-dataflow-docs</module>
		<module>spring-cloud-dataflow-package</module>
	</modules>
	<dependencies>
	</dependencies>
	<repositories>
		<repository>
			<id>groovy-plugins-release</id>
			<url>https://groovy.jfrog.io/artifactory/plugins-release</url>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>groovy-plugins-release</id>
			<url>https://groovy.jfrog.io/artifactory/plugins-release</url>
		</pluginRepository>
	</pluginRepositories>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<parameters>true</parameters>
					<release>17</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.gmaven</groupId>
				<artifactId>groovy-maven-plugin</artifactId>
				<version>2.1.1</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.groovy</groupId>
						<artifactId>groovy</artifactId>
						<version>4.0.23</version>
						<type>pom</type>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<phase>validate</phase>
						<goals>
							<goal>execute</goal>
						</goals>
						<configuration>
							<properties>
								<basedir>${project.basedir}</basedir>
							</properties>
							<source>${project.basedir}/src/test/groovy/check-pom.groovy</source>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
